log
Sat 18 May 2024 02:45:43 PM UTC: 
 tests:  0|5
total_score: 0/70
2f4e123
Sat 18 May 2024 03:48:02 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:10: error: ‘k’ is used uninitialized [-Werror=uninitialized]
   67 |    int i,k;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
ffec5f7
Sat 18 May 2024 03:48:20 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
007c9f6
Sat 18 May 2024 03:48:57 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
acc544f
